tests/errors/duplicate_operation_tydef_effect.eff
(* Duplicate operations are not allowed in an effect type *)
type cow =
effect
  operation chew : unit -> integer
  operation chew : unit -> integer
end

