tests/errors/duplicate_operation_tydef_effect.eff.ref
Syntax error (file "./errors/duplicate_operation_tydef_effect.eff", line 3, char 1):
parser error
